[package]
name = "json_index"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
fjall = "2.8.0"
flatten-serde-json = "0.1.0"
nanoid = "0.4.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
uuid = { version = "1.16.0", features = ["v7"] }
